--- a/Tests/Interface/HtmlTable.Tree.html
+++ b/Tests/Interface/HtmlTable.Tree.html
@@ -280,9 +280,13 @@ table tr.selected td, table tr.table-tr-selected td, table tr.selected td a, tab
 var table = new HtmlTable($('tree'), {
 	selectable: true
 });
-// var table2 = new HtmlTable($('tree2'), {
-// 	noBuild: true
-// });
+var table2 = new HtmlTable($('tree2'), {
+	noBuild: true
+});
+table.keyboard.activate();
+$(document.body).addEvent('click:relay(table)', function(e, tbl){
+	tbl.retrieve('HtmlTable').keyboard.activate();
+});
 
 $('addRow').addEvent('click', function(e){
 	e.stop();
